syntax = "proto3";

package axelar.axelarnet.v1beta1;

// CallContractsProposal is a gov Content type for calling contracts on other chains
message CallContractsProposal {
  string title = 1;
  string description = 2;
  repeated ContractCall contract_calls = 3;
}

message ContractCall {
  string chain = 1;
  string contract_address = 2;
  bytes payload = 3;
}


