syntax = "proto3";
package axl_rpc;

service AxelarRpc{
  rpc Verify(stream VerifyRequest) returns (stream VerifyResponse);
  rpc GetPayload(GetPayloadRequest) returns (GetPayloadResponse);
  rpc SubscribeToApprovals(SubscribeToApprovalsRequest) returns (stream SubscribeToApprovalsResponse);
}

message VerifyRequest{
  Message message = 1;
}

message VerifyResponse{
  Message message = 1;
  bool success = 2;
}

message Message{
  string id = 1; // the unique identifier with which the message can be looked up on the source chain
  string source_chain = 2;
  string source_address= 3;
  string destination_chain = 4;
  string destination_address = 5;
  bytes payload = 6;
  // when we have a better idea of the requirement, we can add an additional optional field here to facilitate verification proofs
}

message GetPayloadRequest{
  bytes hash = 1;
}

message GetPayloadResponse{
  bytes payload = 1;
}

message SubscribeToApprovalsRequest{
  string chain = 1;
  optional uint64 start_height = 2; // can be used to replay events
}

message SubscribeToApprovalsResponse{
  string chain = 1;
  bytes execute_data = 2;
  uint64 block_height = 3;
}
